<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plane_background"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/text_ip"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center|end"
        android:gravity="center|end"
        android:text="@string/show_ip_msg"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_port"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center|end"
        android:gravity="center|end"
        android:text="@string/show_port_msg"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ip" />

    <EditText
        android:id="@+id/input_ip"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="phone"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:hint="@string/ip_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_ip"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"
        android:autofillHints="IP Address" />

    <EditText
        android:id="@+id/input_port"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="number"
        android:textSize="22sp"
        android:hint="@string/port_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text_port"
        app:layout_constraintTop_toBottomOf="@+id/input_ip"
        android:layout_marginRight="16dp"
        android:autofillHints="Port Number" />

    <Button
        android:id="@+id/connect"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:enabled="false"
        android:text="@string/button_connect"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_port"
        app:layout_constraintVertical_bias="0.668" />

</androidx.constraintlayout.widget.ConstraintLayout>